Adiciona Geração de Relatório em HTML
- Implementa funcionalidade para criar um arquivo HTML interativo ao finalizar a execução dos testes automatizados.
- Enriquece a apresentação dos resultados, proporcionando uma visualização mais amigável e informativa dos testes realizados.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.6.0",
     "cypress-xpath": "^1.6.2",
     "xpath": "^0.0.32"
+  },
+  "devDependencies": {
+    "cypress": "^13.6.2"
   }
 }
